k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat4me-message-deploy
spec:
  replicas: 5
  selector:
    matchLabels:
      app: chat4me-message
  template:
    metadata:
      labels:
        app: chat4me-message
    spec:
      containers:
        - name: chat4me-message
          image: dalcreeper/docker-loris-repo:chat4me-message-0.0.1
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "400Mi"
              cpu: "50m"
            limits:
              memory: "400Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: chat4me-message-service
spec:
  selector:
    app: chat4me-message
  ports:
    - protocol: TCP
      port: 8010
      targetPort: 8082
      nodePort: 30082
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat4me-message-ingress
spec:
  rules:
    - host: chat4me-message.local
      http:
        paths:
          - path: /messages
            pathType: Prefix
            backend:
              service:
                name: chat4me-message-service
                port:
                  number: 8010
